# background_task_with_celery_demo

./: .gitignore  README.md  manage.py  pyproject.toml
background_task_demo/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
user_profile/: models.py  tasks.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py
